--- a/people/gerry.html
+++ b/people/gerry.html
@@ -1,1 +1,176 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description"
+        content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
+    <link rel="shortcut icon" href="images/music-note-alt.png">
+    <link rel="stylesheet" href="../styles/newstyles.css">
+    <link rel="stylesheet" href="../styles/artists.css">
+    <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+        });
+    </script>
+    <title>Artist: Gerry Mulligan</title>
+</head>
+
+<body>
+    <header>
+        <h1><i class="fa-solid fa-music"></i> Artist Gerry Mulligan <i class="fa-solid fa-music"></i>
+        </h1>
+    </header>
+    <main>
+        <!-- Navigation Menu Coding -->
+        <nav id="mobile_menu"></nav>
+        <nav id="nav_menu">
+            <ul>
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
+                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                    <ul id="drop-down">
+                        <li><a href="gerry.html" class="lastitem current">Gerry Mulligan</a></li>
+                        <li><a href="maynard.html" class="lastitem">Maynard Ferguson</a></li>
+                        <li><a href="stan.html" class="lastitem">Stan Getz</a></li>
+                        <li><a href="michel.html" class="lastitem">Michel Camilo</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="artist">
+            <div id="artist2">
+                <h1>Gerry Mulligan</h1>
+                <figure class="fig1">
+                    <img src="../images/gerry_mulligan.jpg"
+                        alt="Image of Gerry Mulligan sitting with his baritone saxophone" id="gerry">
+                    <figcaption>Mulligan, c. 1980s, by William P. Gottlieb</figcaption>
+                </figure>
+                <p>Gerry Mulligan was a renowned American jazz saxophonist, composer, and arranger who made significant
+                    contributions to the genre during his career. Born on April 6, 1927, in Queens, New York, Mulligan
+                    started playing the piano and later switched to the baritone saxophone. His unique sound and
+                    approach to
+                    playing the instrument quickly gained attention and became his trademark.
+
+                    Mulligan's career took off in the late 1940s when he joined the groundbreaking Miles Davis Nonet,
+                    which
+                    led to the creation of the influential "Birth of the Cool" recordings. His arrangements and
+                    compositions
+                    for the Nonet showcased his innovative talent as a composer and arranger. Mulligan's style was
+                    characterized by his melodic and harmonically sophisticated improvisations, often featuring a cool
+                    and
+                    relaxed tone.
+
+                    In the 1950s, Mulligan formed the Gerry Mulligan Quartet, which featured Chet Baker on trumpet. The
+                    quartet gained immense popularity and became one of the most successful and influential groups of
+                    the
+                    West Coast jazz movement. Mulligan's compositions, such as "Bernie's Tune" and "Walkin' Shoes,"
+                    became
+                    jazz standards and demonstrated his ability to create memorable melodies and intricate arrangements.
+                    Throughout his career, Mulligan</p>
+                <figure class="fig2">
+                    <img src="../images/gerry_mulligan2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <figcaption>Mulligan on piano in the Netherlands in 1960</figcaption>
+                </figure>
+                <p>collaborated with numerous jazz legends, including Thelonious Monk,
+                    Duke
+                    Ellington, and Stan Getz, among others. He also explored various musical styles, experimenting with
+                    orchestral arrangements and exploring his love for Brazilian bossa nova. His versatility and
+                    willingness
+                    to push boundaries made him a highly respected figure in the jazz world.s
+
+                    Gerry Mulligan's contributions to jazz as a baritone saxophonist, composer, and arranger left an
+                    indelible mark on the genre. His melodic sensibility, unique sound, and innovative approach continue
+                    to
+                    inspire musicians to this day. Mulligan's legacy as a jazz icon lives on through his recordings,
+                    compositions, and the impact he made on the evolution of jazz music.3
+                    In addition to his instrumental talents, Gerry Mulligan was also a prolific and gifted composer. He
+                    wrote numerous compositions that have become jazz standards and are still performed and recorded by
+                    musicians today. Mulligan's compositions often featured memorable melodies, intricate harmonies, and
+                    rhythmic complexity. His ability to blend elements of traditional jazz with modern influences
+                    created a
+                    distinct and recognizable sound that set him apart from his contemporaries.</p>
+            </div>
+            <div id="artist3">
+                <h1>Top Songs</h1>
+                <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
+                <table id="table">
+                    <tr>
+                        <th class="first">Num</th>
+                        <th class="first">Song</th>
+                        <th class="first">Plays</th>
+                    </tr>
+                    <tr>
+                        <td class="center first">1</td>
+                        <td class="right">Lullaby Of The Leaves</td>
+                        <td class="center">28.7M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">2</td>
+                        <td class="right">Stardust</td>
+                        <td class="center">12.9M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">3</td>
+                        <td class="right">Prelude In E Minor</td>
+                        <td class="center">7.0M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">4</td>
+                        <td class="right">Walkin' Shoes</td>
+                        <td class="center">6.0M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">5</td>
+                        <td class="right">Night Lights</td>
+                        <td class="center">5.7M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">6</td>
+                        <td class="right">Move</td>
+                        <td class="center">5.2M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">7</td>
+                        <td class="right">Line For Lyons</td>
+                        <td class="center">5.2M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">8</td>
+                        <td class="right">What's The Rush</td>
+                        <td class="center">3.2M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">9</td>
+                        <td class="right">As Time Goes By</td>
+                        <td class="center">2.9M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">10</td>
+                        <td class="right">Bernie's Tune</td>
+                        <td class="center">2.4M</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="returntotop">
+            <p><a href="#top">Return to Top</a></p>
+        </div>
+        <div class="copyright">
+            <p><strong>&copy; Evan Peterson 2023</strong></p>
+        </div>
+    </footer>
+</body>
+
+</html>
