--- a/people/maynard.html
+++ b/people/maynard.html
@@ -1,1 +1,181 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description"
+        content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
+    <link rel="shortcut icon" href="images/music-note-alt.png">
+    <link rel="stylesheet" href="../styles/newstyles.css">
+    <link rel="stylesheet" href="../styles/artists.css">
+    <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+        });
+    </script>
+    <title>Artist: Maynard Ferguson</title>
+</head>
+
+<body>
+    <header>
+        <h1><i class="fa-solid fa-music"></i> Artist Maynard Ferguson <i class="fa-solid fa-music"></i>
+        </h1>
+    </header>
+    <main>
+        <!-- Navigation Menu Coding -->
+        <nav id="mobile_menu"></nav>
+        <nav id="nav_menu">
+            <ul>
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
+                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                    <ul id="drop-down">
+                        <li><a href="gerry.html" class="lastitem">Gerry Mulligan</a></li>
+                        <li><a href="maynard.html" class="lastitem current">Maynard Ferguson</a></li>
+                        <li><a href="stan.html" class="lastitem">Stan Getz</a></li>
+                        <li><a href="michel.html" class="lastitem">Michel Camilo</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="artist">
+            <div id="artist2">
+                <h1>Maynard Ferguson</h1>
+                <figure class="fig1">
+                    <img src="../images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet"
+                        id="maynard">
+                    <figcaption>Jazz trumpet player Maynard Ferguson. <a
+                            href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA
+                            3.0</a></figcaption>
+                </figure>
+                <p>Maynard Ferguson was a Canadian jazz trumpeter and bandleader known for his incredible technical
+                    virtuosity and soaring high notes. Born on May 4, 1928, in Verdun, Quebec, Ferguson began his
+                    musical journey at a young age. He quickly developed a reputation for his remarkable trumpet
+                    playing, characterized by his ability to play in the extreme upper register and his powerful sound.
+
+                    Ferguson's career took off in the 1950s when he joined the Stan Kenton Orchestra as a featured
+                    soloist. His dynamic and electrifying performances, particularly on songs like "Maynard Ferguson's
+                    Blues," showcased his impressive range and command over the instrument. Ferguson's association with
+                    Kenton's band elevated his status as one of the most formidable trumpet players in the jazz world.
+
+                    In the 1960s, Ferguson formed his own big band, the "Maynard Ferguson Orchestra," which gained
+                    widespread popularity. The band was renowned for its high-energy performances and the incorporation
+                    of elements from various musical styles, including jazz, rock, and funk. Ferguson's arrangements
+                    pushed the boundaries of traditional big band music, blending complex harmonies, intricate rhythms,
+                    and powerful brass sections. His recordings, such as "Birdland," "Gonna Fly Now," and "MacArthur
+                    Park," became iconic and showcased his ability to fuse different genres into a cohesive and exciting
+                    musical
+                </p>
+                <figure class="fig2">
+                    <img src="../images/maynard_ferguson2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <figcaption>Ferguson in San Francisco, 1978 <a
+                            href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA
+                            3.0</a></figcaption>
+                </figure>
+                <p>
+                    experience.
+                    Ferguson's career was also marked by his dedication to musical education. He established the Maynard
+                    Ferguson Institute of Jazz Studies, where he mentored aspiring musicians and shared his expertise.
+                    Ferguson believed in nurturing young talent and encouraging the next generation of jazz artists.
+
+                    Throughout his career, Ferguson collaborated with a diverse range of musicians, including legends
+                    like Count Basie, Duke Ellington, and Dizzy Gillespie. He also had a strong influence on younger
+                    trumpet players, inspiring many with his technical prowess and showmanship. Ferguson's ability to
+                    blend technical excellence with passionate and energetic performances set him apart as a truly
+                    iconic figure in the jazz world.
+
+                    In the later years of his career, Ferguson continued to tour and record extensively. He consistently
+                    pushed the boundaries of his trumpet playing, constantly striving for new challenges and musical
+                    innovations. Despite health issues, he remained dedicated to his craft until his passing on August
+                    23, 2006.
+
+                    Maynard Ferguson's impact on the jazz world cannot be overstated. His extraordinary trumpet playing,
+                    innovative arrangements, and energetic stage presence made him one of the most revered and
+                    influential figures in the genre. His legacy lives on through his recordings, compositions, and the
+                    countless musicians he inspired to reach new heights in their own musical journeys. Maynard
+                    Ferguson's contributions to jazz continue to resonate with audiences and trumpet players alike,
+                    leaving an enduring mark on the history of the genre.</p>
+            </div>
+            <div id="artist3">
+                <h1>Top Songs</h1>
+                <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
+                <table id="table">
+                    <tr>
+                        <th class="first">Num</th>
+                        <th class="first">Song</th>
+                        <th class="first">Plays</th>
+                    </tr>
+                    <tr>
+                        <td class="center first">1</td>
+                        <td class="right">Birdland</td>
+                        <td class="center">4.9M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">2</td>
+                        <td class="right">Gonna Fly Now</td>
+                        <td class="center">2.1M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">3</td>
+                        <td class="right">Chameleon</td>
+                        <td class="center">2.1M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">4</td>
+                        <td class="right">Macarthur</td>
+                        <td class="center">1.4M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">5</td>
+                        <td class="right">Give It One</td>
+                        <td class="center">1.0M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">6</td>
+                        <td class="right">Coconut Champagne - Live</td>
+                        <td class="center">980K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">7</td>
+                        <td class="right">It Might As Well Be Spring</td>
+                        <td class="center">909K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">8</td>
+                        <td class="right">Gospel John</td>
+                        <td class="center">833K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">9</td>
+                        <td class="right">Mister Mellow</td>
+                        <td class="center">514K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">10</td>
+                        <td class="right">Cruisin' For A Bluessin'</td>
+                        <td class="center">506K</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="returntotop">
+            <p><a href="#top">Return to Top</a></p>
+        </div>
+        <div class="copyright">
+            <p><strong>&copy; Evan Peterson 2023</strong></p>
+        </div>
+    </footer>
+</body>
+
+</html>
