--- a/people/stan.html
+++ b/people/stan.html
@@ -1,1 +1,175 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description"
+        content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
+    <link rel="shortcut icon" href="images/music-note-alt.png">
+    <link rel="stylesheet" href="../styles/newstyles.css">
+    <link rel="stylesheet" href="../styles/artists.css">
+    <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+        });
+    </script>
+    <title>Artist: Stan Getz</title>
+</head>
+
+<body>
+    <header>
+        <h1><i class="fa-solid fa-music"></i> Artist Stan Getz <i class="fa-solid fa-music"></i>
+        </h1>
+    </header>
+    <main>
+        <!-- Navigation Menu Coding -->
+        <nav id="mobile_menu"></nav>
+        <nav id="nav_menu">
+            <ul>
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
+                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                    <ul id="drop-down">
+                        <li><a href="gerry.html" class="lastitem">Gerry Mulligan</a></li>
+                        <li><a href="maynard.html" class="lastitem">Maynard Ferguson</a></li>
+                        <li><a href="stan.html" class="lastitem current">Stan Getz</a></li>
+                        <li><a href="michel.html" class="lastitem">Michel Camilo</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="artist">
+            <div id="artist2">
+                <h1>Stan Getz</h1>
+                <figure class="fig1">
+                    <img src="../images/stan_getz.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
+                        id="gerry">
+                    <figcaption>Stan Getz in 1958</figcaption>
+                </figure>
+                <p>Stan Getz was an iconic American jazz saxophonist known for his smooth tone and lyrical
+                    improvisations. Born on February 2, 1927, in Philadelphia, Pennsylvania, Getz began his musical
+                    journey on the clarinet before transitioning to the tenor saxophone. His distinctive sound and
+                    melodic approach quickly caught the attention of audiences and fellow musicians.
+
+                    Getz rose to prominence in the 1950s as part of the West Coast jazz scene. His association with the
+                    cool jazz movement, characterized by its relaxed and understated style, solidified his reputation as
+                    one of the genre's leading figures. Getz's collaborations with pianist and composer, João Gilberto,
+                    on the landmark album "Getz/Gilberto" brought the bossa nova style to international prominence. The
+                    album featured the now-classic recording of "The Girl from Ipanema" and helped popularize Brazilian
+                    jazz worldwide.
+
+                    Throughout his career, Getz collaborated with a wide range of musicians, including Oscar Peterson,
+                    Dizzy Gillespie, and Bill Evans. His ability to blend seamlessly with other musicians and adapt to
+                    different musical styles showcased his versatility and adaptability as a performer.
+
+                    Getz's playing style was characterized by his beautiful tone and expressive phrasing. His melodic
+                    improvisations had a lyrical quality that captivated listeners, earning him the nickname "The
+                    Sound." Getz's ability to convey emotion through his playing made him a beloved figure among jazz
+                    fans</p>
+                <figure class="fig2">
+                    <img src="../images/stan_getz2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <figcaption>Stan Getz and Chet Baker in 1983</figcaption>
+                </figure>
+                <p> worldwide. Despite personal struggles with substance abuse, Getz's musical output remained consistently strong.
+                    He continued to record and perform throughout his career, exploring various styles and collaborating
+                    with both established and emerging musicians. His dedication to his craft and his unwavering
+                    commitment to creating beautiful music made him an enduring presence in the jazz world.
+
+                    Stan Getz's contributions to jazz were widely recognized, and he received numerous accolades,
+                    including Grammy Awards and induction into the DownBeat Jazz Hall of Fame. His recordings, such as
+                    "Focus," "Stan Getz Plays," and "Captain Marvel," continue to inspire and influence generations of
+                    musicians.
+
+                    Getz's impact extends beyond his technical mastery and musical accomplishments. He played a
+                    significant role in popularizing Brazilian jazz and fostering cross-cultural musical collaborations.
+                    His love for Brazilian music and his ability to infuse it with his own unique style helped bridge
+                    cultural gaps and expand the boundaries of jazz.
+
+                    Stan Getz's legacy as one of the greatest saxophonists in jazz history is undeniable. His ability to
+                    convey emotion through his playing, his smooth and lyrical tone, and his influential collaborations
+                    have left an indelible mark on the genre. Getz's musical legacy continues to inspire and captivate
+                    audiences, ensuring his place among the jazz greats.</p>
+            </div>
+            <div id="artist3">
+                <h1>Top Songs</h1>
+                <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
+                <table id="table">
+                    <tr>
+                        <th class="first">Num</th>
+                        <th class="first">Song</th>
+                        <th class="first">Plays</th>
+                    </tr>
+                    <tr>
+                        <td class="center first">1</td>
+                        <td class="right">The Girl From Ipanema </td>
+                        <td class="center">154M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">2</td>
+                        <td class="right">Corcovado</td>
+                        <td class="center">92M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">3</td>
+                        <td class="right">Só Danço Samba</td>
+                        <td class="center">65M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">4</td>
+                        <td class="right">A Nightingale Sang In Berkeley Square</td>
+                        <td class="center">58M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">5</td>
+                        <td class="right">Para Machuchar Meu Coracao</td>
+                        <td class="center">47M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">6</td>
+                        <td class="right">Desafinado</td>
+                        <td class="center">36M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">7</td>
+                        <td class="right">Corcovado - Single Version</td>
+                        <td class="center">27M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">8</td>
+                        <td class="right">The Girl From Ipanema - Single Version</td>
+                        <td class="center">26M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">9</td>
+                        <td class="right">But Beautiful</td>
+                        <td class="center">15M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">10</td>
+                        <td class="right">The Girl From Ipanema - Live</td>
+                        <td class="center">7.3M</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="returntotop">
+            <p><a href="#top">Return to Top</a></p>
+        </div>
+        <div class="copyright">
+            <p><strong>&copy; Evan Peterson 2023</strong></p>
+        </div>
+    </footer>
+</body>
+
+</html>
