--- a/pages/artists.html
+++ b/pages/artists.html
@@ -12,6 +12,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+        });
+    </script>
   <title>Artists</title>
 </head>
 
@@ -20,6 +28,7 @@
     <h1><i class="fa-solid fa-music"></i> Best Jazz Artists <i class="fa-solid fa-music"></i></h1>
   </header>
   <main>
+    <nav id="mobile_menu"></nav>
     <nav id="nav_menu">
       <ul>
         <li><a href="../index.html">Home Page</a></li>
