--- a/people/michel.html
+++ b/people/michel.html
@@ -1,1 +1,174 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description"
+        content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
+    <link rel="shortcut icon" href="images/music-note-alt.png">
+    <link rel="stylesheet" href="../styles/newstyles.css">
+    <link rel="stylesheet" href="../styles/artists.css">
+    <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+        });
+    </script>
+    <title>Artist: Michel Camilo</title>
+</head>
+
+<body>
+    <header>
+        <h1><i class="fa-solid fa-music"></i> Artist Michel Camilo <i class="fa-solid fa-music"></i>
+        </h1>
+    </header>
+    <main>
+        <!-- Navigation Menu Coding -->
+        <nav id="mobile_menu"></nav>
+        <nav id="nav_menu">
+            <ul>
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
+                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                    <ul id="drop-down">
+                        <li><a href="gerry.html" class="lastitem">Gerry Mulligan</a></li>
+                        <li><a href="maynard.html" class="lastitem">Maynard Ferguson</a></li>
+                        <li><a href="stan.html" class="lastitem">Stan Getz</a></li>
+                        <li><a href="michel.html" class="lastitem current">Michel Camilo</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="artist">
+            <div id="artist2">
+                <h1>Michel Camilo</h1>
+                <figure class="fig1">
+                    <img src="../images/michel_camilo.jpg"
+                        alt="Image of Gerry Mulligan sitting with his baritone saxophone" id="gerry">
+                    <figcaption>Michel Camilo With His Piano</figcaption>
+                </figure>
+                <p>
+                    Michel Camilo is a highly accomplished and versatile pianist, composer, and bandleader known for his
+                    dynamic and virtuosic playing style. Born on April 4, 1954, in Santo Domingo, Dominican Republic,
+                    Camilo showed early talent and passion for music. He began studying classical piano at a young age
+                    and later delved into jazz, incorporating elements of his Latin heritage into his playing.
+
+                    Camilo's career took off in the 1980s when he relocated to New York City. He quickly gained
+                    recognition for his exceptional technical abilities and his ability to seamlessly blend jazz, Latin,
+                    and classical influences. His debut album, "Why Not?", garnered critical acclaim and established him
+                    as a rising star in the jazz world.
+
+                    Throughout his career, Camilo has collaborated with renowned musicians such as Dizzy Gillespie, Tito
+                    Puente, and Paquito D'Rivera. His distinctive playing style, characterized by lightning-fast runs,
+                    complex harmonies, and infectious rhythmic patterns, earned him a reputation as one of the most
+                    exciting and innovative pianists of his generation.
+
+                    In addition to his virtuosic piano skills, Camilo is also an accomplished composer. His compositions
+                    blend jazz harmonies with Latin rhythms, creating a unique and vibrant musical language. Tracks like
+                    "Caribe" and "On Fire" showcase his ability to infuse infectious energy and passion into his
+                    compositions, while pieces like "Remembrance" demonstrate his talent for crafting beautiful and
+                    emotive ballads. Camilo has received numerous </p>
+                <figure class="fig2">
+                    <img src="../images/michel_camilo2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <figcaption>Michel Camilo in concert (2015) <a href="https://creativecommons.org/licenses/by-sa/2.0/"
+                            target="_blank">CC BY-SA 2.0</a></figcaption>
+                </figure>
+                <p>accolades throughout his career, including Grammy Awards for his albums
+                    "On Fire" and "Live at the Blue Note." His contributions to the jazz genre have been recognized and
+                    celebrated, and he has become an influential figure for aspiring jazz musicians, particularly those
+                    interested in incorporating Latin elements into their playing.
+
+                    Beyond his solo work, Camilo has led various ensembles, including his trio and big band. His groups
+                    have performed at major jazz festivals around the world, captivating audiences with their tight
+                    arrangements, exceptional musicianship, and infectious energy. Camilo's ability to lead and inspire
+                    his fellow musicians onstage is a testament to his mastery as a bandleader.
+
+                    Camilo's career continues to thrive, with new recordings and performances that showcase his evolving
+                    artistry. He consistently pushes the boundaries of his music, exploring new sounds and
+                    collaborations. Whether performing with his trio, as a solo artist, or in larger ensemble settings,
+                    Michel Camilo's passion, virtuosity, and infectious enthusiasm make him a true force in the world of
+                    jazz. His contributions have enriched the genre and left an indelible mark on the history of jazz
+                    piano.</p>
+            </div>
+            <div id="artist3">
+                <h1>Top Songs</h1>
+                <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
+                <table id="table">
+                    <tr>
+                        <th class="first">Num</th>
+                        <th class="first">Song</th>
+                        <th class="first">Plays</th>
+                    </tr>
+                    <tr>
+                        <td class="center first">1</td>
+                        <td class="right">Gnossiennes No.1</td>
+                        <td class="center">2.4M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">2</td>
+                        <td class="right">Caribe</td>
+                        <td class="center">1.5M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">3</td>
+                        <td class="right">From Within - Live</td>
+                        <td class="center">1.2M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">4</td>
+                        <td class="right">Água E Vinho</td>
+                        <td class="center">1.1M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">5</td>
+                        <td class="right">Cinema Paradiso</td>
+                        <td class="center">1.1M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">6</td>
+                        <td class="right">Amor De Conuco</td>
+                        <td class="center">1.0M</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">7</td>
+                        <td class="right">Oblivion</td>
+                        <td class="center">944K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">8</td>
+                        <td class="right">Our Spanish Love Song</td>
+                        <td class="center">843K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">9</td>
+                        <td class="right">Not Yet</td>
+                        <td class="center">778K</td>
+                    </tr>
+                    <tr>
+                        <td class="center first">10</td>
+                        <td class="right">Why Not!</td>
+                        <td class="center">681K</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="returntotop">
+            <p><a href="#top">Return to Top</a></p>
+        </div>
+        <div class="copyright">
+            <p><strong>&copy; Evan Peterson 2023</strong></p>
+        </div>
+    </footer>
+</body>
+
+</html>
