fixed some bugs and typos

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -13,13 +13,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/slicknav.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/jquery.slicknav.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
-        });
-    </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../js/jquery.slicknav.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+    });
+  </script>
   <title>Artists</title>
 </head>
 
@@ -28,6 +28,7 @@
     <h1><i class="fa-solid fa-music"></i> Best Jazz Artists <i class="fa-solid fa-music"></i></h1>
   </header>
   <main>
+    <!-- Navigation Menu Coding -->
     <nav id="mobile_menu"></nav>
     <nav id="nav_menu">
       <ul>
@@ -43,6 +44,7 @@
         </li>
       </ul>
     </nav>
+    <!--Coding for the 4 artists listed on this page-->
     <div class="artists">
       <div id="mulligan">
         <h3>Gerry Mulligan</h3>
