--- a/people/gerry.html
+++ b/people/gerry.html
@@ -48,6 +48,7 @@
             </ul>
         </nav>
         <div class="artist">
+            <!--The Following is the coding for the information about this artist-->
             <div id="artist2">
                 <h1>Gerry Mulligan</h1>
                 <figure class="fig1">
@@ -100,6 +101,7 @@
                     created a
                     distinct and recognizable sound that set him apart from his contemporaries.</p>
             </div>
+            <!--The following is the coding for the top songs section for this artist-->
             <div id="artist3">
                 <h1>Top Songs</h1>
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
