--- a/people/michel.html
+++ b/people/michel.html
@@ -48,6 +48,7 @@
             </ul>
         </nav>
         <div class="artist">
+            <!--The Following is the coding for the information about this artist-->
             <div id="artist2">
                 <h1>Michel Camilo</h1>
                 <figure class="fig1">
@@ -78,8 +79,9 @@
                     emotive ballads. Camilo has received numerous </p>
                 <figure class="fig2">
                     <img src="../images/michel_camilo2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
-                    <figcaption>Michel Camilo in concert (2015) <a href="https://creativecommons.org/licenses/by-sa/2.0/"
-                            target="_blank">CC BY-SA 2.0</a></figcaption>
+                    <figcaption>Michel Camilo in concert (2015) <a
+                            href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY-SA 2.0</a>
+                    </figcaption>
                 </figure>
                 <p>accolades throughout his career, including Grammy Awards for his albums
                     "On Fire" and "Live at the Blue Note." His contributions to the jazz genre have been recognized and
@@ -98,6 +100,7 @@
                     jazz. His contributions have enriched the genre and left an indelible mark on the history of jazz
                     piano.</p>
             </div>
+            <!--The following is the coding for the top songs section for this artist-->
             <div id="artist3">
                 <h1>Top Songs</h1>
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
