--- a/people/stan.html
+++ b/people/stan.html
@@ -48,6 +48,7 @@
             </ul>
         </nav>
         <div class="artist">
+            <!--The Following is the coding for the information about this artist-->
             <div id="artist2">
                 <h1>Stan Getz</h1>
                 <figure class="fig1">
@@ -79,7 +80,8 @@
                     <img src="../images/stan_getz2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Stan Getz and Chet Baker in 1983</figcaption>
                 </figure>
-                <p> worldwide. Despite personal struggles with substance abuse, Getz's musical output remained consistently strong.
+                <p> worldwide. Despite personal struggles with substance abuse, Getz's musical output remained
+                    consistently strong.
                     He continued to record and perform throughout his career, exploring various styles and collaborating
                     with both established and emerging musicians. His dedication to his craft and his unwavering
                     commitment to creating beautiful music made him an enduring presence in the jazz world.
@@ -99,6 +101,7 @@
                     have left an indelible mark on the genre. Getz's musical legacy continues to inspire and captivate
                     audiences, ensuring his place among the jazz greats.</p>
             </div>
+            <!--The following is the coding for the top songs section for this artist-->
             <div id="artist3">
                 <h1>Top Songs</h1>
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
