--- a/people/maynard.html
+++ b/people/maynard.html
@@ -48,6 +48,7 @@
             </ul>
         </nav>
         <div class="artist">
+            <!--The Following is the coding for the information about this artist-->
             <div id="artist2">
                 <h1>Maynard Ferguson</h1>
                 <figure class="fig1">
@@ -105,6 +106,7 @@
                     Ferguson's contributions to jazz continue to resonate with audiences and trumpet players alike,
                     leaving an enduring mark on the history of the genre.</p>
             </div>
+            <!--The following is the coding for the top songs section for this artist-->
             <div id="artist3">
                 <h1>Top Songs</h1>
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
